29 May 2008
+ added a force_name parameter to useEditor. Allows the dev to specify
  which tool to use.
+ Added comment about the use_filter parameter in parseOutput.
+ TinyMCE - added limited interface for bbcode. Used in comments.
+ TinyMCE - pulled configuration into included files to help with
            limited settings
+ TinyMCE - Fixed error message with GoogleSpell.
+ Updated: javascript/editors/tinymce/default.php,
           javascript/editors/tinymce/head.js,
           javascript/editors/tinymce/limited.js,
           javascript/editors/tinymce/custom.js,
           javascript/editors/tinymce/default.php

27 May 2008
+ DBPager : joined columns can now be header sorted.
+ Text: error check added in xml parsing.
+ DB_Pager.txt : updated info

23 May 2008
+ Added button option to prompt javascript
+ Updated: javascript/prompt/body2.js, javascript/prompt/default.php,
  javascript/prompt/readme.txt

21 May 2008
+ File::checkmimetype - Extension is forced to lowercase to allow
  proper file checking. 

20 May 2008
+ Changed values in Key to their appropriate defines.
+ Added some error checks in pagesmith conversion.
+ Thumbnail directory fixes added to pagesmith and category
  conversion.


19 May 2008
+ Added new language define IGNORE_BROWSER_LANGUAGE. Prevents
  phpwebsite from using the browser's language preferences if the user
  has not set their language cookie.
+ Updated: core/conf/language.php

29 April 2008
+ Added parameter to phpws_stats that gives you language information.
+ Bug# 1778308 - Uninstalled modules are no longer accessible.
+ Removed pass by reference
+ Removed category content variable from themes.
+ Added active parameter to installModList

28 April 2008
+ The Italian translation was causing problems using the confirm
  javascript. It was using " instead of &quot;. I added a check in the
  default.php to change it back.
+ Added moduleLimit instructions to File_Manager.txt