@@ -20,3 +20,4 @@ icon_smile.gif=+:Smile=+::)
 icon_surprised.gif=+:Surprised=+::o
 icon_surprised.gif=+:Surprised=+::eek:
 icon_wink.gif=+:Wink=+:;)
+banana.gif=+:Banana=+::banana:
