@@ -1,8 +1,8 @@
 tinyMCE.init({
 	theme : 'advanced',
 	mode : 'specific_textareas',
-	plugins : 'bbcode',
-	theme_advanced_buttons1 : 'bold,italic,underline,undo,redo,link,unlink,image,forecolor,styleselect,removeformat,code',
+	plugins : 'bbcode,emotions',
+	theme_advanced_buttons1 : 'bold,italic,underline,undo,redo,link,unlink,image,forecolor,emotions,styleselect,removeformat',
 	theme_advanced_buttons2 : '',
 	theme_advanced_buttons3 : '',
 	theme_advanced_toolbar_location : 'bottom',
